# EchoNote

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  eslint-plugin-hypr.mjs  go.mod  pnpm-lock.yaml  pyproject.toml
.claude/: settings.local.json
apps/ai/: Cargo.toml
apps/ai/src/: auth.rs  main.rs
apps/api/: package.json
apps/bot/: package.json
apps/control/: package.json
apps/desktop/: package.json  postcss.config.mjs
apps/eval-cli/: Cargo.toml
apps/eval-cli/src/: main.rs  report.rs  submissions.rs
apps/granola/: Cargo.toml
apps/howto/: package.json
apps/k6/: package.json
apps/pro/: package.json
apps/restate/: package.json
apps/storybook/: package.json  vite.config.ts
apps/web/: package.json
crates/aec/: Cargo.toml
crates/agc/: Cargo.toml
crates/am/: Cargo.toml
crates/am2/: Cargo.toml
crates/am2/src/: diarization.rs  transcribe.rs
crates/audio/: Cargo.toml
crates/audio-utils/: Cargo.toml
crates/audio-utils/src/: lib.rs
crates/audio-utils/src/resampler/: dynamic_new.rs  dynamic_old.rs  mod.rs  static_new.rs
crates/db-user/: Cargo.toml
crates/db-user/assets/: thank-you.md
crates/db-user/src/: config_types.rs  extensions_ops.rs  humans_ops.rs  lib.rs  organizations_ops.rs  sessions_ops.rs
crates/detect/: Cargo.toml
crates/detect/src/: language.rs
crates/detect/src/list/: macos.rs
crates/device-monitor/: Cargo.toml
crates/eval/: Cargo.toml
crates/file/: Cargo.toml
crates/language/: Cargo.toml
crates/llama/: Cargo.toml
crates/llm/: Cargo.toml
crates/llm-interface/: Cargo.toml
crates/llm-proxy/: Cargo.toml
crates/llm/src/: error.rs  lib.rs  task.rs
crates/moonshine/: Cargo.toml
crates/moonshine/src/: error.rs  model.rs
crates/notification/: Cargo.toml
crates/notification-gpui/: Cargo.toml
crates/notification-gpui/src/: lib.rs  toast.rs
crates/notification-linux/: Cargo.toml
crates/notification-macos/: Cargo.toml
crates/notification/src/: lib.rs
crates/owhisper-client/: Cargo.toml
crates/owhisper-client/src/: lib.rs  live.rs  test_utils.rs
crates/owhisper-client/src/adapter/: audio.rs  mod.rs  owhisper.rs  url_builder.rs
crates/owhisper-client/src/adapter/argmax/: batch.rs  language.rs  live.rs  mod.rs
crates/owhisper-client/src/adapter/assemblyai/: batch.rs  live.rs  mod.rs
crates/owhisper-client/src/adapter/deepgram/: batch.rs  language.rs  live.rs  mod.rs
crates/owhisper-client/src/adapter/elevenlabs/: batch.rs  live.rs  mod.rs
crates/owhisper-client/src/adapter/fireworks/: batch.rs  live.rs  mod.rs
crates/owhisper-client/src/adapter/gladia/: batch.rs  live.rs  mod.rs
crates/owhisper-client/src/adapter/openai/: batch.rs  live.rs  mod.rs
crates/owhisper-client/src/adapter/soniox/: batch.rs  live.rs  mod.rs
crates/owhisper-interface/: Cargo.toml
crates/pyannote-cloud/: Cargo.toml
crates/pyannote-local/: Cargo.toml
crates/pyannote-local/src/: embedding.rs  error.rs  segmentation.rs
crates/template-app-legacy/: Cargo.toml
crates/transcribe-aws/: Cargo.toml
crates/transcribe-azure/: Cargo.toml
crates/transcribe-deepgram/: Cargo.toml
crates/transcribe-deepgram/src/: lib.rs  service.rs
crates/transcribe-gcp/: Cargo.toml
crates/transcribe-moonshine/: Cargo.toml
crates/transcribe-moonshine/src/: error.rs
crates/transcribe-moonshine/src/service/: streaming.rs
crates/transcribe-openai/: Cargo.toml
crates/transcribe-proxy/: Cargo.toml
crates/transcribe-proxy/src/: analytics.rs
crates/transcribe-proxy/src/routes/: batch.rs
crates/transcribe-proxy/tests/: analytics_e2e.rs  proxy_e2e.rs
crates/transcribe-proxy/tests/common/: mod.rs
crates/transcribe-whisper-local/: Cargo.toml
crates/transcribe-whisper-local/src/: lib.rs
crates/transcribe-whisper-local/src/service/: recorded.rs  streaming.rs
crates/vad-ext/: Cargo.toml
crates/vad-ext/src/: continuous.rs  continuous2.rs  lib.rs  streaming.rs
crates/vosk-model/: Cargo.toml
crates/vosk-model/src/: lib.rs
crates/whisper-local/: Cargo.toml
crates/ws-utils/: Cargo.toml
crates/ws-utils/src/: lib.rs
extensions/: package.json
extensions/calendar/: package.json
extensions/shared/: build.ts  generate.ts  runtime.ts
plugins/analytics/: Cargo.toml  package.json
plugins/apple-calendar/: package.json
plugins/apple-contact/: package.json
plugins/audio-priority/: Cargo.toml  package.json
plugins/auth/: package.json
plugins/bedrock/: package.json
plugins/cli2/: package.json
plugins/db2/: Cargo.toml  package.json
plugins/deeplink2/: Cargo.toml  package.json
plugins/deeplink2/src/: docs.rs
plugins/detect/: Cargo.toml  package.json
plugins/detect/src/: commands.rs  events.rs  ext.rs  handler.rs  lib.rs
plugins/extensions/: Cargo.toml  package.json
plugins/fs-sync/: Cargo.toml  package.json
plugins/fs-sync/src/: audio.rs  error.rs  frontmatter.rs
plugins/fs2/: package.json
plugins/hooks/: Cargo.toml  package.json
plugins/hooks/src/: docs.rs
plugins/icon/: package.json
plugins/importer/: Cargo.toml  package.json
plugins/importer/src/: error.rs  types.rs
plugins/importer/src/sources/: granola.rs
plugins/importer/src/sources/hyprnote/: mod.rs  transforms.rs
plugins/js/: package.json
plugins/listener/: Cargo.toml  package.json
plugins/listener/src/: commands.rs  error.rs  ext.rs  lib.rs
plugins/listener/src/actors/: listener.rs  mod.rs  recorder.rs  session.rs
plugins/listener/src/actors/source/: mod.rs  pipeline.rs  stream.rs
plugins/listener2/: Cargo.toml  package.json
plugins/local-llm/: Cargo.toml  package.json
plugins/local-llm/src/: error.rs  lib.rs  server.rs
plugins/local-llm/src/ext/: plugin.rs
plugins/local-stt/: Cargo.toml  package.json
plugins/local-stt/src/: commands.rs  error.rs  ext.rs  lib.rs  model.rs
plugins/local-stt/src/server/: external.rs  internal.rs
plugins/misc/: Cargo.toml  package.json
plugins/network/: package.json
plugins/notification/: Cargo.toml  package.json
plugins/notification/src/: commands.rs  ext.rs  handler.rs
plugins/notify/: package.json
scripts/: generate-icons.py
(+467 files in other folders)
