[package]
name = "ai"
version = "0.1.0"
edition = "2024"

[dependencies]
echonote-llm-proxy = { workspace = true }
echonote-supabase-auth = { workspace = true }
echonote-transcribe-proxy = { workspace = true }
owhisper-providers = { workspace = true }

axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true }

dotenvy = { workspace = true }
jsonwebtoken = { workspace = true }
sentry = { workspace = true, features = ["tower", "tower-axum-matched-path", "tracing"] }
tower = { workspace = true }
