[package]
name = "am2"
version = "0.1.0"
edition = "2024"
links = "am2"

[dev-dependencies]
echonote-data = { workspace = true }

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { workspace = true, features = ["build"] }

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = { workspace = true }
