[package]
name = "audio-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
echonote-audio-interface = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }

dasp = { workspace = true }
hound = { workspace = true }
rodio = { workspace = true, features = ["symphonia-all"] }
rubato = "0.16.2"
vorbis_rs = { workspace = true }

[dev-dependencies]
echonote-data = { workspace = true }
tokio = { workspace = true, features = ["full"] }
