[package]
name = "detect"
version = "0.1.0"
edition = "2024"

[features]
default = []
mic = []
language = []
list = []
app = []
zoom = []

[dependencies]
isolang = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
tracing = { workspace = true }

serde = { workspace = true, features = ["derive"] }
specta = { workspace = true, features = ["derive"] }

[target."cfg(target_os = \"macos\")".dependencies]
echonote-bundle = { workspace = true }
echonote-language = { workspace = true }

plist = "1.7"
cidre = { workspace = true }

objc2-foundation = { workspace = true, features = ["NSLocale", "NSArray", "NSString"] }
objc2-app-kit = { workspace = true }
objc2 = { workspace = true }
objc2-core-foundation = { workspace = true }
objc2-application-services = { workspace = true }
macos-accessibility-client = { workspace = true }

[target."cfg(target_os = \"linux\")".dependencies]
libpulse-binding = "2.30"
