[package]
name = "llm"
version = "0.1.0"
edition = "2024"

[dependencies]
echonote-gbnf = { workspace = true }
echonote-llama = { workspace = true }
echonote-llm-interface = { workspace = true }
echonote-template-app-legacy = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

futures-util = { workspace = true }
tokio = { workspace = true }
