[package]
name = "moonshine"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = ["echonote-onnx/cuda"]
coreml = ["echonote-onnx/coreml"]
directml = ["echonote-onnx/directml"]

[dependencies]
echonote-onnx = { workspace = true }
owhisper-config = { workspace = true }

thiserror = { workspace = true }
tokenizers = { workspace = true }

[dev-dependencies]
dirs = { workspace = true }
echonote-data = { workspace = true }
rodio = { workspace = true }
