[package]
name = "notification-gpui"
version = "0.1.0"
edition = "2024"

[features]
default = []

[[example]]
name = "test_notification"

[dependencies]
echonote-notification-interface = { workspace = true }
gpui = { version = "0.2", features = ["runtime_shaders"] }
gpui_squircle = "1"

[dev-dependencies]
