[package]
name = "notification"
version = "0.1.0"
edition = "2024"

[features]
default = ["legacy"]
legacy = ["dep:echonote-notification-macos", "dep:echonote-notification-linux"]
new = ["dep:echonote-notification-gpui"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

echonote-notification-gpui = { path = "../notification-gpui", package = "notification-gpui", optional = true }
echonote-notification-interface = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
echonote-notification-macos = { path = "../notification-macos", package = "notification-macos", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
echonote-notification-linux = { path = "../notification-linux", package = "notification-linux", optional = true }
