[package]
name = "owhisper-client"
version = "0.0.1"
edition = "2024"

[features]
default = []
argmax = ["echonote-audio-utils"]

[dependencies]
echonote-audio-utils = { workspace = true, optional = true }
echonote-language = { workspace = true }
echonote-ws-client = { workspace = true }

owhisper-interface = { workspace = true }
owhisper-providers = { workspace = true }

futures-util = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
reqwest-middleware = { workspace = true, features = ["json", "multipart"] }
reqwest-tracing = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tokio-stream = { workspace = true }

base64 = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
echonote-audio-utils = { workspace = true }
echonote-data = { workspace = true }

deepgram = { workspace = true, features = ["listen"] }
rodio = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing-subscriber = { workspace = true }
