[package]
name = "pyannote-local"
version = "0.1.0"
edition = "2024"

[features]
default = []
coreml = ["echonote-onnx/coreml"]
directml = ["echonote-onnx/directml"]
load-dynamic = ["echonote-onnx/load-dynamic"]

[dependencies]
echonote-onnx = { workspace = true }

dasp = { workspace = true }
knf-rs = { git = "https://github.com/thewh1teagle/pyannote-rs", rev = "d97bd3b", package = "knf-rs" }
simsimd = { version = "6" }

thiserror = { workspace = true }

serde = { workspace = true, features = ["derive"] }
specta = { workspace = true, features = ["derive"] }

[dev-dependencies]
echonote-data = { workspace = true }

approx = { workspace = true }
rodio = { workspace = true }
