[package]
name = "transcribe-deepgram"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
echonote-audio-utils = { workspace = true }
echonote-data = { workspace = true }
owhisper-client = { workspace = true }

dirs = { workspace = true }
rodio = { workspace = true }

[dependencies]
echonote-audio-utils = { workspace = true }
owhisper-config = { workspace = true }
owhisper-interface = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

async-stream = { workspace = true }
axum = { workspace = true, features = ["ws"] }
bytes = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

deepgram = { workspace = true, default-features = false, features = ["listen"] }
