[package]
name = "transcribe-moonshine"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = ["echonote-moonshine/cuda"]
coreml = ["echonote-moonshine/coreml"]
directml = ["echonote-moonshine/directml"]

[dependencies]
echonote-moonshine = { workspace = true }
owhisper-config = { workspace = true }
owhisper-interface = { workspace = true }

echonote-audio-utils = { workspace = true }
echonote-vad-ext = { workspace = true }
echonote-ws-utils = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = { workspace = true }
thiserror = { workspace = true }

async-stream = { workspace = true }
axum = { workspace = true, features = ["ws"] }
bytes = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
