[package]
name = "transcribe-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
echonote-analytics = { workspace = true }
echonote-language = { workspace = true }
owhisper-client = { workspace = true }
owhisper-interface = { workspace = true }
owhisper-providers = { workspace = true }

axum = { workspace = true, features = ["ws"] }
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
reqwest-middleware = { workspace = true }
serde_html_form = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "sync", "macros"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
tower = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

base64 = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
echonote-audio-utils = { workspace = true }
echonote-data = { workspace = true }
echonote-language = { workspace = true }
owhisper-interface = { workspace = true }

rodio = { workspace = true }
tokio-stream = { workspace = true }
tracing-subscriber = { workspace = true }
