[package]
name = "transcribe-whisper-local"
version = "0.1.0"
edition = "2024"

[features]
default = []
coreml = ["echonote-whisper-local/coreml"]
directml = ["echonote-pyannote-local/directml"]
cuda = ["echonote-whisper-local/cuda"]
hipblas = ["echonote-whisper-local/hipblas"]
openblas = ["echonote-whisper-local/openblas"]
metal = ["echonote-whisper-local/metal"]
vulkan = ["echonote-whisper-local/vulkan"]
openmp = ["echonote-whisper-local/openmp"]
load-dynamic = ["echonote-pyannote-local/load-dynamic"]

[dev-dependencies]
dirs = { workspace = true }
echonote-data = { workspace = true }
futures-util = { workspace = true }
owhisper-client = { workspace = true }

[dependencies]
echonote-audio-utils = { workspace = true }
echonote-pyannote-local = { workspace = true }
echonote-vad-ext = { workspace = true }
echonote-whisper = { workspace = true }
echonote-whisper-local = { workspace = true }
echonote-ws-utils = { workspace = true }
owhisper-interface = { workspace = true }

serde_json = { workspace = true }
serde_qs = { workspace = true }
thiserror = { workspace = true }

axum = { workspace = true, features = ["ws"] }
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

rodio = { workspace = true }
