[package]
name = "vad-ext"
version = "0.1.0"
edition = "2024"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.build-dependencies]
swift-rs = { workspace = true, features = ["build"] }

[dev-dependencies]
echonote-data = { workspace = true }
hound = { workspace = true }
rodio = { workspace = true }

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

echonote-audio-interface = { workspace = true }
echonote-audio-utils = { workspace = true }
echonote-vad3 = { workspace = true }
echonote-vvad = { workspace = true }
silero-rs = { workspace = true }

futures-util = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
