[package]
name = "vosk-model"
version = "0.1.0"
edition = "2024"

[dependencies]
echonote-download-interface = { workspace = true }
echonote-file = { workspace = true }

serde = { workspace = true, features = ["derive"] }
specta = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
zip = { workspace = true }
