[package]
name = "ws-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
echonote-audio-utils = { workspace = true }
owhisper-interface = { workspace = true }

axum = { workspace = true, features = ["ws"] }
echonote-audio-interface = { workspace = true }
serde_json = { workspace = true }

futures-util = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
