[package]
name = "tauri-plugin-deeplink2"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-deeplink2"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

echonote-docs = { workspace = true }
serde_yaml = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["test"] }
tauri-plugin-deep-link = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

serde = { workspace = true }
specta = { workspace = true }
strum = { workspace = true, features = ["derive"] }

thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
