[package]
name = "tauri-plugin-detect"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-detect"
description = ""

[features]
default = ["zoom"]
zoom = ["echonote-detect/zoom"]
language = ["echonote-detect/language"]

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[dependencies]
echonote-detect = { workspace = true, features = ["mic", "list", "language"] }
echonote-host = { workspace = true }
echonote-intercept = { workspace = true }

tauri = { workspace = true, features = ["specta", "test"] }
tauri-plugin-windows = { workspace = true }

specta = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
