[package]
name = "tauri-plugin-fs-sync"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-fs-sync"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
assert_fs = "1"
echonote-data = { workspace = true }
predicates = "3"
specta-typescript = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[dependencies]
echonote-audio-utils = { workspace = true }
echonote-frontmatter = { workspace = true }
echonote-tiptap = { workspace = true }

tauri = { workspace = true, features = ["test"] }
tauri-plugin-notify = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-settings = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
specta = { workspace = true, features = ["serde_json"] }

glob = "0.3"
rayon = { workspace = true }
rodio = { workspace = true, features = ["symphonia-all"] }

thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
