[package]
name = "tauri-plugin-hooks"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-hooks"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

echonote-docs = { workspace = true }

[dependencies]
tauri-plugin-path2 = { workspace = true }
tauri-plugin-settings = { workspace = true }

tauri = { workspace = true, features = ["test"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
specta = { workspace = true }

dirs = { workspace = true }
futures-util = { workspace = true }
shellexpand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "time"] }
