[package]
name = "tauri-plugin-importer"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/node_modules"]
links = "tauri-plugin-importer"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[dependencies]
echonote-db-core = { workspace = true }
echonote-db-user = { workspace = true }
echonote-granola = { workspace = true }

owhisper-interface = { workspace = true }
tauri-plugin-settings = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true }
tauri = { workspace = true, features = ["test"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

chrono = { workspace = true }
dirs = { workspace = true }
htmd = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
uuid = { workspace = true, features = ["v4", "v5"] }
