[package]
name = "tauri-plugin-listener"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-listener"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
insta = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
rodio = { workspace = true, features = ["wav"] }
serde_json = { workspace = true }
specta-typescript = { workspace = true }
uuid = { workspace = true }

[dependencies]
echonote-aec = { workspace = true }
echonote-agc = { workspace = true }
echonote-audio = { workspace = true }
echonote-audio-device = { workspace = true }
echonote-audio-utils = { workspace = true }
echonote-data = { workspace = true }
echonote-device-monitor = { workspace = true }
echonote-host = { workspace = true }
echonote-intercept = { workspace = true }
echonote-language = { workspace = true }
echonote-llm = { workspace = true }
echonote-mac = { workspace = true }
echonote-vad-ext = { workspace = true }
echonote-vad2 = { workspace = true }
tauri-plugin-fs-sync = { workspace = true }

owhisper-client = { workspace = true }
owhisper-interface = { workspace = true }

tauri-plugin-hooks = { workspace = true }
tauri-plugin-local-stt = { workspace = true }
tauri-plugin-settings = { workspace = true }
tauri-plugin-tray = { workspace = true }

tauri = { workspace = true, features = ["specta", "test"] }

specta = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

bytes = { workspace = true }
chrono = { workspace = true }
codes-iso-639 = { workspace = true }
dirs = { workspace = true }
ordered-float = { version = "5", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

hound = { workspace = true }
vorbis_rs = { workspace = true }

ractor = { workspace = true }
ractor-supervisor = { workspace = true }

futures-util = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

sentry = { workspace = true }
