[package]
name = "tauri-plugin-local-llm"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-local-llm"
description = ""

[features]
default = []
metal = ["echonote-llama/metal"]
cuda = ["echonote-llama/cuda"]
vulkan = ["echonote-llama/vulkan"]
native = ["echonote-llama/native"]

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
dirs = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
specta-typescript = { workspace = true }
tauri-plugin-store = { workspace = true }

[dependencies]
echonote-download-interface = { workspace = true }
echonote-file = { workspace = true }
echonote-gbnf = { workspace = true }
echonote-gguf = { workspace = true }
echonote-llama = { workspace = true }
echonote-llm = { workspace = true }
echonote-llm-interface = { workspace = true }

tauri = { workspace = true, features = ["test"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

tauri-plugin-settings = { workspace = true }
tauri-plugin-store2 = { workspace = true }
tauri-plugin-windows = { workspace = true, optional = true }

thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
strum = { workspace = true, features = ["derive"] }

async-openai = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }

futures-util = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
reqwest-streams = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-util = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
