[package]
name = "tauri-plugin-local-stt"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-local-stt"
description = ""

[features]
default = []
coreml = ["echonote-transcribe-whisper-local/coreml", "echonote-transcribe-moonshine/coreml"]
directml = ["echonote-transcribe-whisper-local/directml", "echonote-transcribe-moonshine/directml"]
cuda = ["echonote-transcribe-whisper-local/cuda", "echonote-transcribe-moonshine/cuda"]
hipblas = ["echonote-transcribe-whisper-local/hipblas"]
openblas = ["echonote-transcribe-whisper-local/openblas"]
metal = ["echonote-transcribe-whisper-local/metal"]
vulkan = ["echonote-transcribe-whisper-local/vulkan"]
openmp = ["echonote-transcribe-whisper-local/openmp"]
load-dynamic = ["echonote-transcribe-whisper-local/load-dynamic"]

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
echonote-audio-utils = { workspace = true }
echonote-data = { workspace = true }
echonote-language = { workspace = true, features = ["whisper"] }

dirs = { workspace = true }
reqwest = { workspace = true }
rodio = { workspace = true }
similar = { workspace = true }
specta-typescript = { workspace = true }
tokio-tungstenite = { workspace = true }
tower = { workspace = true }

[dependencies]
echonote-am = { workspace = true }
echonote-audio-utils = { workspace = true }
echonote-download-interface = { workspace = true }
echonote-file = { workspace = true }
echonote-host = { workspace = true }
echonote-language = { workspace = true, features = ["whisper"] }
echonote-transcribe-moonshine = { workspace = true }
echonote-transcribe-whisper-local = { workspace = true }
echonote-whisper-local = { workspace = true }
echonote-whisper-local-model = { workspace = true }
echonote-vosk-model = { workspace = true }

owhisper-client = { workspace = true }
owhisper-interface = { workspace = true }

tauri = { workspace = true, features = ["test"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

tauri-plugin-settings = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-sidecar2 = { workspace = true }
tauri-plugin-windows = { workspace = true }

dirs = { workspace = true }
json-patch = "4"
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

axum = { workspace = true, features = ["ws"] }
axum-extra = { workspace = true, features = ["query"] }
tower-http = { workspace = true, features = ["cors", "trace"] }

backon = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

ractor = { workspace = true }
ractor-supervisor = { workspace = true }

port-killer = "0.1.0"
port_check = "0.3.0"
